--- a/assignments/PA4/Makefile
+++ b/assignments/PA4/Makefile
@@ -2,13 +2,15 @@
 ASSN = 4
 CLASS= cs143
 CLASSDIR= ../..
-LIB= -L/usr/pubsw/lib   
+LIB= `llvm-config --cxxflags --ldflags --system-libs --libs core`
+
+
 AR= gar
 ARCHIVE_NEW= -cr
 RANLIB= gar -qs
 
 SRC= semant.cc semant.h cool-tree.h cool-tree.handcode.h inheritancegraph.h semanterror.h good.cl bad.cl README
-CSRC= semant-phase.cc symtab_example.cc inheritancegraph.cc environment.cc semanterror.cc handle_flags.cc  ast-lex.cc ast-parse.cc utilities.cc stringtab.cc dumptype.cc tree.cc cool-tree.cc
+CSRC= semant-phase.cc symtab_example.cc inheritancegraph.cc environment.cc semanterror.cc handle_flags.cc  ast-lex.cc ast-parse.cc utilities.cc stringtab.cc dumptype.cc tree.cc codegen.cc cool-tree.cc
 TSRC= mycoolc mysemant cool-tree.aps
 CGEN=
 HGEN=
