--- a/assignments/PA4/Makefile
+++ b/assignments/PA4/Makefile
@@ -9,7 +9,7 @@ AR= gar
 ARCHIVE_NEW= -cr
 RANLIB= gar -qs
 
-SRC= semant.cc semant.h cool-tree.h cool-tree.handcode.h inheritancegraph.h semanterror.h good.cl bad.cl README
+SRC= semant.cc semant.h cool-tree.h cool-tree.handcode.h inheritancegraph.h semanterror.h good.cl bad.cl README basicclasses.h
 CSRC= semant-phase.cc symtab_example.cc inheritancegraph.cc environment.cc semanterror.cc handle_flags.cc  ast-lex.cc ast-parse.cc utilities.cc stringtab.cc dumptype.cc tree.cc codegen.cc cool-tree.cc
 TSRC= mycoolc mysemant cool-tree.aps
 CGEN=
